--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fontsource/roboto": "^5.2.9",
     "@vueuse/core": "^14.1.0",
+    "md5": "^2.3.0",
     "pinia": "^3.0.4",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
@@ -25,6 +26,7 @@
   "devDependencies": {
     "@mdi/font": "^7.4.47",
     "@tsconfig/node24": "^24.0.3",
+    "@types/md5": "^2.3.6",
     "@types/node": "^24.10.1",
     "@vitejs/plugin-vue": "^6.0.2",
     "@vue/eslint-config-typescript": "^14.6.0",
