--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@vueuse/core": "^14.1.0",
     "md5": "^2.3.0",
     "pinia": "^3.0.4",
+    "random": "^5.4.1",
     "vue": "^3.5.25",
     "vue-router": "^4.6.3",
     "vuetify": "^3.11.4"
