--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
   "dependencies": {
     "@fontsource/roboto": "^5.2.9",
     "@vueuse/core": "^14.1.0",
+    "ical-generator": "^10.0.0",
     "md5": "^2.3.0",
     "pinia": "^3.0.4",
     "random": "^5.4.1",
